@@ -1184,3 +1184,4 @@ v- Fixed some bugreport stuff
 - Added "tainted" variable. 3rd party modules must ++ this upon load,
   -- upon unload. Will show a "3" in flags.
 - Added extras/m_rawto.c - 3rd party module. Fixed some documentation
+- Added andi's OpenBSD fix for the symbol issue with prefix _
